--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,8 @@
 
     <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">&#9776;</button>
 
-    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse d-flex justify-content-between">
+    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
+      <div class="container-fluid d-flex justify-content-between">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/products'" (click)="isMenuCollapsed = true">Products</a>
@@ -21,6 +22,7 @@
           <a class="nav-link" [routerLink]="'/register'" (click)="isMenuCollapsed = true">Register</a>
         </li>
       </ul>
+      </div>
     </div>
   </div>
 </nav>
