Improve product-item's look

--- a/frontend/src/app/components/product-image/product-image.component.html
+++ b/frontend/src/app/components/product-image/product-image.component.html
@@ -1,1 +1,5 @@
-<img class="card-img-top" [src]="image" alt="Product image">
+<img class="card-img-top d-block border-2 border-bottom border-primary"
+     [src]="image"
+     width="300"
+     height="200"
+     alt="Product image">
