--- a/frontend/src/app/components/products/products.component.html
+++ b/frontend/src/app/components/products/products.component.html
@@ -1,11 +1,13 @@
 <div class="row mt-2">
   <div *ngFor="let product of products$.result" class="grid col">
       <product-item
+        class="d-flex justify-content-center"
         [id]="product.id || ''"
         [manufacturer]="product.manufacturer"
         [productName]="product.name"
-        [image]="product.image"
+        [image]="product.image || 'assets/placeholder.png'"
         [price]="product.price"
+        [quantity]="product.quantity"
         [currency]="product.currency || 'USD'"
       >
       </product-item>
