--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -6,22 +6,23 @@
 
     <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
       <div class="container-fluid d-flex justify-content-between">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/products'" (click)="isMenuCollapsed = true">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/add-product'" (click)="isMenuCollapsed = true">Add Product</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/login'" (click)="isMenuCollapsed = true">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="'/register'" (click)="isMenuCollapsed = true">Register</a>
-        </li>
-      </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/products'" [queryParams]="{ page: 1, limit: 20 }"
+               (click)="isMenuCollapsed = true">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/add-product'" (click)="isMenuCollapsed = true">Add Product</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/login'" (click)="isMenuCollapsed = true">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="'/register'" (click)="isMenuCollapsed = true">Register</a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
