--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -2,14 +2,15 @@
   <h1 class="entry-title"><span>Create Account</span></h1>
   <hr>
   <form class="form-horizontal" method="post" name="signup" id="signup" [formGroup]="registrationForm"
-        (ngSubmit)="createOrUpdate(registrationForm.value)">
-    <div class="form-group">
-      <label class="control-label col-sm-3">Name <span class="text-danger">*</span></label>
+        (ngSubmit)="createOrUpdate(registrationForm.value)" invalidForm [form]="registrationForm"
+        [messageTemplate]="errorMessage">
+    <div class="input-group">
+      <label class="control-label col-sm-3">Login <span class="text-danger">*</span></label>
       <div class="col-md-8 col-sm-9">
         <input type="text" class="form-control" formControlName="login" id="login" placeholder="Type login" value="">
       </div>
     </div>
-    <div class="form-group">
+    <div class="input-group mt-4">
       <label class="control-label col-sm-3">Email<span class="text-danger">*</span></label>
       <div class="col-md-8 col-sm-9">
         <div class="input-group">
@@ -18,9 +19,9 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
+    <div class="input-group mt-4">
       <label class="control-label col-sm-3">Password<span class="text-danger">*</span></label>
-      <div class="col-md-5 col-sm-8">
+      <div class="col-md-8 col-sm-9">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
           <input type="password" class="form-control" formControlName="password" id="password"
@@ -28,9 +29,9 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
+    <div class="input-group mt-4">
       <label class="control-label col-sm-3">Re-password <span class="text-danger">*</span></label>
-      <div class="col-md-5 col-sm-8">
+      <div class="col-md-8 col-sm-9">
         <div class="input-group">
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
           <input type="password" class="form-control" formControlName="reEnteredPassword" id="reEnteredPassword"
@@ -38,12 +39,17 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
+    <div class="input-group mt-4">
       <div class="col-xs-offset-3 col-xs-10">
         <button name="Submit" type="submit" class="btn btn-primary">
           Sing Up
         </button>
       </div>
+    </div>
+    <div class="mt-2">
+      <ng-template #errorMessage>
+        <p class="alert alert-danger">Some fields are not filled correctly.</p>
+      </ng-template>
     </div>
   </form>
 </section>
