Add product details page

--- a/frontend/src/app/components/product-item/product-item.component.html
+++ b/frontend/src/app/components/product-item/product-item.component.html
@@ -9,6 +9,6 @@
       [quantity]="quantity"
       [currency]="currency"
     ></product-text>
-    <product-buttons></product-buttons>
+    <product-buttons [productId]="id || '0'"></product-buttons>
   </div>
 </div>
