--- a/frontend/src/app/components/product-buttons/product-buttons.component.html
+++ b/frontend/src/app/components/product-buttons/product-buttons.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex justify-content-between">
-  <button type="button" class="btn btn-secondary">Manage</button>
+  <button type="button" class="btn btn-secondary" (click)="goToDetails()">Details</button>
   <button type="button" class="btn btn-primary">Add to cart</button>
 </div>
