Disable buttons when form is invalid

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
              formControlName="password" placeholder="Password" title="Password">
     </div>
 
-    <button class="btn btn-primary mt-4" type="submit" title="Login button">
+    <button class="btn btn-primary mt-4" type="submit" title="Login button" [disabled]="loginForm.invalid">
       Login
     </button>
     <ng-template #errorMessage>
