--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -41,8 +41,8 @@
     </div>
     <div class="input-group mt-4">
       <div class="col-xs-offset-3 col-xs-10">
-        <button name="Submit" type="submit" class="btn btn-primary">
-          Sing Up
+        <button name="Submit" type="submit" class="btn btn-primary" [disabled]="registrationForm.invalid">
+          Register
         </button>
       </div>
     </div>
