Add product description

--- a/frontend/src/app/components/product-details/product-details.component.html
+++ b/frontend/src/app/components/product-details/product-details.component.html
@@ -34,4 +34,7 @@
       <p><span class="fw-bold">Price: </span>{{price}} {{currency}}</p>
     </div>
   </div>
+  <div>
+    <p class="text-center">{{description}}</p>
+  </div>
 </article>
