Add form to add a new product

--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           </li>
           <div *ngIf="isAdmin()">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="'/add-product'" (click)="isMenuCollapsed = true">Add Product</a>
+              <a class="nav-link" [routerLink]="'/products/add'" (click)="isMenuCollapsed = true">Add Product</a>
             </li>
           </div>
         </ul>
